# MechDetect

./: README.md  pyproject.toml
data/: auc_roc_tensors_dict.txt
src/: accuracy_analysis.ipynb  auc_roc_analysis.ipynb
src/auc_roc_scores/: make_data_cube.py  run_all_experiments.sh  testing.py
src/auc_roc_scores/my-job-chart/: Chart.yaml  run_all_experiments.sh  values.yaml
src/auc_roc_scores/my-job-chart/templates/: _helpers.tpl  job.yaml
