[project]
name = "your_project"
version = "0.1.0"
description = "Short description of your project."
authors = [
    { name = "Nicholas Chandler", email = "njchandler2002@gmail.com" },
    { name = "Phillipp Jung", email = "" },
    { name = "Sebastian Jaeger", email = ""},
    { name = "Felix Biessmann", email = ""}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # add your runtime deps here, for example:
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "ipykernel"
]

[tool.uv]
# optional: specify how uv should behave
# see https://github.com/astral-sh/uv/blob/main/docs/configuration.md

[build-system]
requires = ["uv"]
build-backend = "uv.build"

# optional: for testing, linting, etc.
[project.optional-dependencies]
dev = [
    "ruff"
]
