[project]
name = "mechdetect"
version = "0.1.0"
description = ""
authors = [
    { name = "Nicholas Chandler", email = "njchandler2002@gmail.com" },
    { name = "Phillipp Jung", email = "" },
    { name = "Sebastian Jaeger", email = ""},
    { name = "Felix Biessmann", email = ""}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tab-err",
    "matplotlib",
    "seaborn",
    "ipykernel",
]

# optional: for testing, linting, etc.
[project.optional-dependencies]
dev = [
    "ruff"
]
